<resources>
    <string name="app_name">Shifumi</string>

    <string name="connexion">Connexion</string>
    <string name="bienvenue">Bienvenue</string>

    <string name="inscription">Inscription</string>

    <string name="sexe">Sexe</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="date_naissance">Date de naissance</string>
    <string name="select_date">Sélectionner une date : </string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirm_mot_de_passe">Confirmation du mot de passe</string>

    <string name="champ_non_renseigné">L\'un des champs n\'a pas été renseigné.</string>
    <string name="email_pas_valide">Le mail n\'est pas valide</string>
    <string name="mismatch_password">Les mots de passe saisis ne correspondent pas</string>
    <string name="please_wait">Traitement en cours... Veuillez patienter</string>
    <string name="ajout_user_reussi">Votre inscription a été réalisée avec succès</string>
    <string name="ajout_user_fail">Une erreur est survenue, veuillez réessayer</string>
    <string name="login_user_reussi">Connexion réussie !</string>
    <string name="login_user_fail">La connexion a échoué. Veuillez vérifier vos identifiants.</string>

    <string name="menuClassique">Classique</string>
    <string name="menu4">Puissance 4</string>
    <string name="menu7">Puissance 7</string>

    <string name="menuClassement">Classement</string>
    <string name="menuRegles">Règles</string>
    <string name="menuDeco">Déconnexion</string>

    <string name="titleMenu">Menu Principal</string>
    <string name="titleGameClassique">Mode Classique</string>
    <string name="titleGame4">Mode Puissance 4</string>
    <string name="titleGame7">Mode Puissance 7</string>

    <string name="titleRules">Règles du jeu : général</string>
    <string name="titleRulesScore">Règles du jeu : score</string>
    <string name="titleRulesClassique">Règles du jeu : Mode Classique</string>
    <string name="titleRules4">Règles du jeu : Mode Puissance 4</string>
    <string name="titleRules7">Règles du jeu : Mode Puissance 7</string>
    <string name="titleScoreboard">Classement</string>

    <string name="retour">Retour</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="termine">Terminé</string>

    <string name="finPartie">Fin de la partie</string>
    <string name="vousAvezGagne">Vous avez gagné !</string>
    <string name="vousAvezPerdu">Vous avez perdu !</string>
    <string name="revanche">Revanche</string>
    <string name="retourMenu">Retour au Menu Principal</string>

    <string name="rules1">Une partie se joue en maximum 5 manches.</string>
    <string name="rules2">A chaque manche de la partie, vous pouvez choisir un élément
        contre l\'élément choisi par l\'intelligence artificielle</string>
    <string name="rules3">La partie est gagnée lorsque l\'un des joueurs remporte 3 manches</string>
    <string name="rules4">La manche nulle n\'est pas comptabilisée</string>
    <string name="rulesScore1">Votre score évolue en fonction de vos
        victoires et défaites dans les différents niveaux du jeu</string>
    <string name="rulesScore2">Pour le jeu classique (niveau 1) : une victoire vous fait gagner
        3 points et une défaite vous fait perdre 1 point.</string>
    <string name="rulesScore3">Pour la puissance 4 (niveau 2) : une victoire vous fait gagner
        5 points et une défaite vous fait perdre 2 points.</string>
    <string name="rulesScore4">Pour puissance 7 (niveau 3) : une victoire vous fait gagner
        8 points et une défaite vous fait perdre 3 points.</string>
    <string name="rulesScore5">N.B. Le score minimal est de 0.</string>

    <string name="pierre">Pierre</string>
    <string name="feuille">Feuille</string>
    <string name="ciseaux">Ciseaux</string>
    <string name="puits">Puits</string>
    <string name="feu">Feu</string>
    <string name="eau">Eau</string>
    <string name="air">Air</string>
    <string name="eponge">Éponge</string>

    <string name="resultTie">Égalité</string>
    <string name="resultVictory">Victoire !</string>
    <string name="resultDefeat">Défaite !</string>
    <string name="resultRound">Résultat de la manche :</string>
    <string name="startResultText">A vous de jouer !</string>

    <string name="generalScore">Score total : </string>
    <string name="botScore">Ordinateur : </string>
    <string name="humanScore">Joueur : </string>




</resources>